--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ description: ""
 github:
   username: bobcbui
 swiftype:
-  searchId: iXZyPokVfxFaBTvi64Y6
+  searchId: FpfxYFvC6XNhZvssJYw8
 comment:
     repo: blog
     client_id: a6fb73b3e790e234bab8
