--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ title: Bobcbui
 description: 一个个人网站
 keywords: Bobcbui,Blog,Java,Html,JavaScript,交流群,JME,Python,Linux
 author: Bobcbui
-footerText: 'Copyright © 2016 皖ICP备16016174号'
+footerText: 'Copyright © 2024 湘ICP备20009234号'
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
@@ -22,9 +22,6 @@ exclude: ['CNAME', 'README.md', 'LICENSE', '_site', 'dist', 'Gemfile', 'Gemfile.
 # baseurl配置,如果网站部署在根目录下的其他目录中，请设置为 /目录名
 domainUrl: 'https://bobcbui.ooqn.com'
 baseurl: ''
-
-# 吐个槽地址，会在chat页面中重定向到该地址
-tucaoUrl: https://support.qq.com/product/86335
 
 # 菜单
 # 必填字段 title: '文本' url: '链接'
