--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,37 @@
 /docs/.vuepress/dist
 /node_modules
+# Jekyll
+_site/
+.sass-cache/
+.jekyll-cache/
+.jekyll-metadata
+
+# VitePress
+/docs/.vuepress/dist/
+/docs/.vuepress/.cache/
+/docs/.vuepress/.temp
+.cache/
+dist/
+
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# 编辑器
+*.swp
+*.swo
+.idea/
+.vscode/
+
+# 环境变量
+.env
+.env.local
+
+# 日志和临时文件
+*.log
+*.tmp
+
+# 其他
+CNAME
+blog.sh
+Gemfile.lock
