--- a/package.json
+++ b/package.json
@@ -11,14 +11,10 @@
     "docs:update-package": "npx vp-update"
   },
   "devDependencies": {
-    "@vuepress/bundler-vite": "2.0.0-rc.20",
-    "@vuepress/plugin-shiki": "^2.0.0-rc.0",
-    "@vuepress/theme-default": "2.0.0-rc.88",
-    "sass-embedded": "^1.86.0",
-    "vue": "^3.5.13",
-    "vuepress": "2.0.0-rc.20"
-  },
-  "dependencies": {
-    "swiper": "^11.2.8"
+    "@vuepress/bundler-vite": "^2.0.0-rc.26",
+    "@vuepress/plugin-blog": "^2.0.0-rc.121",
+    "@vuepress/plugin-shiki": "^2.0.0-rc.121",
+    "@vuepress/theme-default": "^2.0.0-rc.121",
+    "vuepress": "^2.0.0-rc.26"
   }
 }
