--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vuepress/plugin-blog": "^2.0.0-rc.121",
     "@vuepress/plugin-shiki": "^2.0.0-rc.121",
     "@vuepress/theme-default": "^2.0.0-rc.121",
+    "sass-embedded": "^1.97.1",
     "vuepress": "^2.0.0-rc.26"
   }
 }
